# computer_graphics

./: .gitignore  CMakeLists.txt  CMakePresets.json  Computer Graphics Project.sln  Computer Graphics Project.vcxproj  Computer Graphics Project.vcxproj.filters  Math.h  Mesh.cpp  Mesh.h  README.md  Shader.cpp  Shader.h  Source.cpp  Vector.h  glad.c
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
include/computer_graphics/: File.h  Math.h  Mesh.h  Point_Cloud.h  Shader.h  UI.h
include/glad/: glad.h
include/imgui/: imgui.h  imgui_impl_glfw.h  imgui_internal.h
include/shaders/LAS_POINTS/: fragment_shader.frag  geometry_shader.geom  vertex_shader.vert
include/shaders/normal_mapping_and_displacement_mapping_and_geometry/: fragment_shader.frag  geometry_shader.geom  vertex_shader.vert
include/shaders/normal_mapping_and_displacement_mapping_and_geometry_POINTS/: fragment_shader.frag  geometry_shader.geom  vertex_shader.vert
include/shaders/normal_mapping_and_displacement_mapping_and_tesselation/: fragment_shader.frag
include/shaders/normal_mapping_and_displacement_mapping_and_tesselation_TRIANGLE_PATCHES/: fragment_shader.frag  tesselation_control_shader.tesc  tesselation_evaluation_shader.tese  vertex_shader.vert
src/: Math.cpp  Mesh.cpp  Shader.cpp  Source.cpp
src/GLFW/: ReadMe.txt
src/computer_graphics/: File.cpp  Main.cpp  Mesh.cpp  Point_Cloud.cpp  Shader.cpp  UI.cpp
src/glad/: glad.c
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
